--- a/index.html
+++ b/index.html
@@ -633,9 +633,10 @@
                 <div class="bg-bg-color-light p-6 rounded-2xl shadow-sm border border-bg-color-medium">
                     <h4 class="font-playfair text-xl font-bold text-wine-red mb-3">Entregas y Envíos</h4>
                      <ul class="list-disc list-inside space-y-2 text-text-dark">
-                        <li>🚚 Envíos a todo el Perú por Shalom.</li>
-                        <li>📍 Puntos de encuentro: Plaza San Miguel y Mall Plaza Bellavista.</li>
-                        <li>🛵 Recojo en San Miguel (puedes enviar tu motorizado).</li>
+                    <li>🚚 Envíos a todo el Perú por Shalom.</li>
+                    <li>🛵 Envíos por motorizado a todo Lima Metropolitana y Callao.</li>
+                    <li>📍 Puntos de encuentro: Plaza San Miguel y Mall Plaza Bellavista.</li>
+                    <li>🤝 Recojo en San Miguel (también puedes enviar tu motorizado).</li>
                     </ul>
                 </div>
             </div>
