Glossy - Calendario V2, Fotos actualizadas

--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
             // ¡Asegúrate de crear una carpeta "imagenes" y guardar tus imágenes allí!
             // NO SE CAMBIAN LAS DESCRIPCIONES SEGÚN LO SOLICITADO
 const products = [
-  { day: 1, name: "Set de labial en barra y gloss", imageUrl: "./images/Duo-v2.png", message: "Labios irresistibles con color y brillo en perfecta armonía.", details: { desc: "Color intenso con acabado suave y un brillo ligero que realza y hidrata los labios.", usage: "Perfila y rellena los labios con el labial en barra para obtener un color definido. Finaliza aplicando el gloss en el centro o en toda la superficie para añadir brillo y volumen." } },
+  { day: 1, name: "Set de labial en barra y gloss - Kevin & Coco", imageUrl: "./images/Duo-v2.png", message: "Labios irresistibles con color y brillo en perfecta armonía.", details: { desc: "Color intenso con acabado suave y un brillo ligero que realza y hidrata los labios.", usage: "Perfila y rellena los labios con el labial en barra para obtener un color definido. Finaliza aplicando el gloss en el centro o en toda la superficie para añadir brillo y volumen." } },
 {
   day: 2,
   name: "Paleta facial 3 en 1 - Kevin & Coco",
@@ -692,10 +692,10 @@ const products = [
     usage: "Usa el contorno para definir los rasgos, aplica el polvo compacto para sellar el maquillaje y finaliza con el iluminador en las zonas altas del rostro para un brillo radiante."
   }
 },
-  { day: 3, name: "Tinta de Labios Carmesí", imageUrl: "./images/Tinta de Labios Carmesi.png", message: "Color vibrante que se siente natural.", details: { desc: "Tinta para labios ultra ligera con pigmentación intensa para un look vibrante.", ingredients: "Extracto de Fruta, Glicerina, Agua Purificada.", usage: "Aplicar con el aplicador sobre los labios y dejar secar unos segundos." } },
+  { day: 3, name: "Tinta de Labios Carmesí - Nossa", imageUrl: "./images/Tinta de Labios Carmesi.png", message: "Color vibrante que se siente natural.", details: { desc: "Tinta para labios ultra ligera con pigmentación intensa para un look vibrante.", ingredients: "Extracto de Fruta, Glicerina, Agua Purificada.", usage: "Aplicar con el aplicador sobre los labios y dejar secar unos segundos." } },
 {
   day: 4,
-  name: "Corrector Kevin & Coco",
+  name: "Corrector - Kevin & Coco",
   imageUrl: "./images/Corrector-v2.png",
   message: "Cubre, ilumina y perfecciona tu piel al instante.",
   details: {
@@ -704,10 +704,10 @@ const products = [
     usage: "Aplica una pequeña cantidad sobre ojeras, manchas o imperfecciones y difumina con brocha, esponja o con la yema de los dedos para un acabado uniforme."
   }
 },
-  { day: 5, name: "Rubor en Barra - Dupe Rhode", imageUrl: "images/Rubor-v2.png", message: "Un toque de color, un toque de vida.", details: { desc: "Rubor en barra con textura cremosa que se funde fácilmente, deja un acabado satinado natural y aporta un toque saludable de color al rostro.", ingredients: "Cera de Abeja, Aceite de Coco, Pigmentos Minerales.", usage: "Aplicar con los dedos o brocha en mejillas y difuminar suavemente." } },
+  { day: 5, name: "Rubor en Barra Dupe Rhode - Kevin & Coco", imageUrl: "images/Rubor-v2.png", message: "Un toque de color, un toque de vida.", details: { desc: "Rubor en barra con textura cremosa que se funde fácilmente, deja un acabado satinado natural y aporta un toque saludable de color al rostro.", ingredients: "Cera de Abeja, Aceite de Coco, Pigmentos Minerales.", usage: "Aplicar con los dedos o brocha en mejillas y difuminar suavemente." } },
 {
   day: 6,
-  name: "Mini paleta Dikalu",
+  name: "Mini paleta - Dikalu",
   imageUrl: "images/MiniPaleta-v2.png",
   message: "Colores compactos, mirada poderosa donde vayas.",
   details: {
@@ -718,7 +718,7 @@ const products = [
 },  
 {
   day: 7,
-  name: "Paleta de sombras Shine",
+  name: "Paleta de sombras Shine - Kevin & Coco",
   imageUrl: "images/PaletaGrande-v2.png",
   message: "Brilla con intensidad y crea miradas que inspiran.",
   details: {
@@ -729,7 +729,7 @@ const products = [
 },
 {
   day: 8,
-  name: "Sellador Fijador Maquillaje",
+  name: "Sellador Fijador Maquillaje - Kevin & Coco",
   imageUrl: "images/Fijador-v2.png",
   message: "Mantén tu maquillaje fresco, firme y radiante todo el día.",
   details: {
@@ -762,10 +762,10 @@ const products = [
   }
 }
 ,  
-{ day: 11, name: "Labial Mousse Barra Matte Italia Deluxe", imageUrl: "images/Labial Musse.jpeg", message: "Color intenso, textura ligera.", details: { desc: "Labial en barra con textura ligera y acabado mate aterciopelado, suave y súper pigmentado.", ingredients: "Vitamina E, Cera de Candelilla, Pigmentos Minerales.", usage: "Aplicar directamente sobre los labios para un acabado uniforme." } },
+{ day: 11, name: "Labial Mousse Barra Matte - Italia Deluxe", imageUrl: "images/Labial Musse.jpeg", message: "Color intenso, textura ligera.", details: { desc: "Labial en barra con textura ligera y acabado mate aterciopelado, suave y súper pigmentado.", ingredients: "Vitamina E, Cera de Candelilla, Pigmentos Minerales.", usage: "Aplicar directamente sobre los labios para un acabado uniforme." } },
 {
   day: 12,
-  name: "Labial Efecto Terciopelado",
+  name: "Labial Efecto Terciopelado - Kevin & Coco",
   imageUrl: "images/Aterciopelado-v2.png",
   message: "Labios suaves, elegantes y con un acabado que destaca.",
   details: {
@@ -777,7 +777,7 @@ const products = [
 { 
   day: 13, 
   isBonus: true, 
-  name: "kit pink kevin set 5 EN 1 - kevin & coco ", 
+  name: "kit pink kevin set 5 EN 1 - Kevin & Coco", 
   imageUrl: "images/Kit-v2.jpeg", 
   message: "¡Gran Premio! El glow perfecto te espera.", 
   details: { 
